# my_example_code

./: .gitignore  README.md
C++/Fronware/websocketclient/: .cproject  make.sh
C++/base_test/: lesson1.cpp  lesson1.out
C++/no_relation_to_3_and_5/: main.cc
C++/stl/: Makefile  codespaces.cpp  vector.cpp
C++/websocketclient/: .project  CMakeLists.txt  build-rpm  vclient.spec
C++/websocketclient/common/: io_service_pool.hpp  terminal_info.cpp
C++/websocketclient/data/: log.conf  update_zh.qm  vclient_version  vclient_zh.qm  vclientstartconfig_zh.qm
C++/websocketclient/icons/: fronview-update.desktop  vclient.desktop  vclientstart.desktop  vclientstart_config.desktop
C++/websocketclient/libwebsocketpp/: Makefile  readme.txt
C++/websocketclient/scripts/: start.sh  update.sh  vclient.sh  vclientnotautostart.sh  vclientstart_config.sh
C++/websocketclient/src/: CMakeLists.txt
C++/websocketclient/tests/: CMakeLists.txt
C++/websocketclient/tests/terminalinfo/: CMakeLists.txt  terminalinfo_test.cpp
C++/websocketclient/vclient/: 2remote  codedit.sh  config.h  imageconf.h  make.sh  vClient.pro  vclient.spec
C/Fronware/Monitor-controller/: Makefile  controller.c  ev_epoll.c  monitor-controller.desktop  monitor-controller.spec  monitor.c  passwd  vaccess_api.c
C/Fronware/tcp-channel/: Makefile  build-rpm  tcp-usbip.spec
C/algorithm/: binary_sort_tree.c  binarytree.c  max_product_in_array.c  quicksort.c  reverse_single_list.c
C/huawei/: proto_parse.c  reverse.c
C/network-programming/tcp/: Makefile  socket_client.c  socket_common.h  socket_server.c
(+290 files in other folders)
